Fix spacing between components

--- a/src/assets/scss/padding.scss
+++ b/src/assets/scss/padding.scss
@@ -47,6 +47,10 @@
   padding-top: 2rem !important;
 }
 
+.pt-3 {
+  padding-top: 3rem !important;
+}
+
 .pb-2 {
   padding-bottom: 2rem !important;
 }
@@ -59,6 +63,16 @@
 .py-3 {
   padding-top: 3rem !important;
   padding-bottom: 3rem !important;
+}
+
+.py-4 {
+  padding-top: 4rem !important;
+  padding-bottom: 4rem !important;
+}
+
+.py-5 {
+  padding-top: 5rem !important;
+  padding-bottom: 5rem !important;
 }
 
 .px-2 {
