--- a/src/assets/scss/text.scss
+++ b/src/assets/scss/text.scss
@@ -32,7 +32,7 @@ a {
 
 .mat-typography h2 {
   font-size: 30px;
-  margin-bottom: 20px;
+  margin-bottom: 0px;
 }
 
 .light {
